ymls/serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: default
spec:
  ports:
    - nodePort: 31452
      port: 80
      targetPort: 80
  selector:
    app: my-app
  externalIPs:
    - 13.61.2.127
