ymls/ingress-first.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-dep-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: <your-ec2-public-ip>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-dep
            port:
              number: 80
