ymls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: <your-ec2-public-ip>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-dep
            port:
              number: 80
  tls:
  - hosts:
    - <your-ec2-public-ip>
    secretName: my-dep-tls
