ymls/net.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tcp-80-443
  namespace: default
spec:
  podSelector: {} # This applies to all pods in the namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
